src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_base64_lossy_input_replacement-3.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_B64_JSON_MATCH).to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("197:").dark_gray(),
        Span::from("    �"),
        Span::from("Item").red().crossed_out(),
        Span::from("foobar").green(),
        Span::from("::�new("),
        Span::from("rg_msg").red().crossed_out(),
        Span::from("foobar").green(),
        Span::from(")"),
    ]),
]
