src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_base64_lossy_selected-2.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_B64_JSON_END).to_span_lines(&ctx)
---
[
    Line::from(""),
]
