src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_base64_lossy_selected-4.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_B64_JSON_CONTEXT).to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("198:").reversed(),
        Span::from("  �}").reversed(),
    ]),
]
